add ==English==, wikify <twit#5690>

--- a/wiki/twit.wikitext
+++ b/wiki/twit.wikitext
@@ -1,9 +1,12 @@
-===[[Etymology]]===
+==English==
+===Etymology===
 :Middle English ''atwiten'', meaning "''to reproach''".
-===[[noun]]===
-#a reproach.
-#a foolish and annoying person.
-#a goldfish laden with eggs.
-#an acronym for the podcast "This Week In Tech".
-===[[verb]]===
-:to reproach; to point out a fault or mistake.
+===Noun===
+#a [[reproach]], [[gibe]] or [[taunt]]
+#a [[foolish]] and [[annoying]] person.
+<!-- Note to editors. NOT a pregnant goldfish -->
+===Initialism===
+'''TWIT'''
+#the [[podcast]] "This Week In Tech".
+===Transitive verb===
+#to [[reproach]], [[ridicule]] or [[tease]]
