a proper entry <specialist#99317>

--- a/wiki/specialist.wikitext
+++ b/wiki/specialist.wikitext
@@ -1,1 +1,9 @@
-Specialist
+==English==
+===Noun===
+'''specialist'''
+{{wikipedia}}
+# someone who is an [[expert]] in, or [[devoted]] to, aome [[specific]] [[branch]] of [[study]] or [[research]]
+# a [[physician]] whose [[practice]] is limited to a [[particular]] branch of [[medicine]] or [[surgery]]
+#(''US Army'') any of several [[noncommissioned]] [[rank]]s [[correspond]]ing to that of [[corporal]]
+===Related terms===
+*[[specialistic]]
