--- a/wiki/specialist.wikitext
+++ b/wiki/specialist.wikitext
@@ -2,8 +2,9 @@
 ===Noun===
 '''specialist'''
 {{wikipedia}}
-# someone who is an [[expert]] in, or [[devoted]] to, aome [[specific]] [[branch]] of [[study]] or [[research]]
+# someone who is an [[expert]] in, or [[devoted]] to, some [[specific]] [[branch]] of [[study]] or [[research]]
 # a [[physician]] whose [[practice]] is limited to a [[particular]] branch of [[medicine]] or [[surgery]]
 #(''US Army'') any of several [[noncommissioned]] [[rank]]s [[correspond]]ing to that of [[corporal]]
+
 ===Related terms===
 *[[specialistic]]
