--- a/wiki/schmuck.wikitext
+++ b/wiki/schmuck.wikitext
@@ -1,3 +1,9 @@
+Schmuck, a Yiddish word, has a range of meaning depending on context. In its most innocuous use, a schmuck is a person who does a stupid thing, in which case “dumb schmuck” is the appropriate expression.
+
+A schmuck's behavior ranges from pesky and inconsiderate, to obnoxious and manipulative. A schmuck's personality type ranges from jerk to bastard.
+
+Schmucky behavior also falls within a range of intentionality. Some schmucks carefully plan their bad behavior, some only a little, and some not at all. For example, the bastard may spend considerable time planning his bad deeds. In contrast, the dumb schmuck and the pesky behave badly without any forethought. 
+
 ==Noun==
 Fool. Incompetent. A jerk.
 
