robot  Adding:gl <accede#30541>

--- a/wiki/accede.wikitext
+++ b/wiki/accede.wikitext
@@ -14,5 +14,6 @@ Latin ''[[accedere]]'' to approach, accede; ''[[ad]]'' + ''[[cedere]]'' to move,
 ===Synonyms===
 *To [[agree]]; [[assent]]; [[consent]]; [[comply]]; [[acquiesce]]; [[concur]]
 
+[[gl:Accede]]
 [[it:accede]]
 [[pt:Accede]]
