--- a/wiki/placeman.wikitext
+++ b/wiki/placeman.wikitext
@@ -3,5 +3,5 @@
 === Noun ===
 '''Placeman''' (''[[countable]]''; ''plural:'' '''[[Placemen]]''')
 
-# One appointed to a political office in government. (''British'')
+# (''British'') One appointed to a political office in government.
 # A derogatory term for an appointee.
