robot  Adding:sv <måndag#25440>

--- a/wiki/m%C3%A5ndag.wikitext
+++ b/wiki/m%C3%A5ndag.wikitext
@@ -13,3 +13,4 @@ The word is originally a short form for ''Månens dag'', meaning ''day of the [[
 [[it:måndag]]
 [[nl:måndag]]
 [[pl:Måndag]]
+[[sv:måndag]]
