--- a/wiki/bindi.wikitext
+++ b/wiki/bindi.wikitext
@@ -1,3 +1,20 @@
+==English==
+{{wikipedia}}
+===Noun===
+'''bindi'''
+#<!--from wikipedia-->the "holy dot," traditionally worn on the [[forehead]] of [[married]] [[Hindu]] women
+#[[makeup]] or [[jewellery]] worn in imitation of '''1'''. 
+
+
+
+====Synonyms====
+*[[tika]]
+*[[pottu]]
+*[[sindoor]]
+*[[tilak]]
+*[[tilakam]]
+*[[kumkum]]
+
 ==Esperanto==
 ===Verb===
 # [[bind]] ([[book]]s).
