an actual definition <coat of arms#43862>

--- a/wiki/coat_of_arms.wikitext
+++ b/wiki/coat_of_arms.wikitext
@@ -1,8 +1,8 @@
 ==English==
-=== Noun ===
+===Noun===
+{{wikipedia}}
 '''[[coat]] of [[arm]]s'''
-
-# {{stub}}
+# [[hereditary]] [[design]]s and [[symbol]]s depicted on an [[escutcheon]], sometimes accompanied by other elements of a [[heraldic]] [[achievement]], such as a [[helm]], [[crest]], [[crest coronet]], [[torse]], [[mantling]] and [[supporter]]s; described by a [[blazon]]
 
 ==== Translations ====
 *Slovak: [[erb]] ''m''
