robot  Adding:fi,gl <accident#4404>

--- a/wiki/accident.wikitext
+++ b/wiki/accident.wikitext
@@ -41,4 +41,6 @@ French ''accident'', from Latin ''[[accidens]]'', ''-dentis'', present participl
 
 [[et:Accident]]
 [[fr:accident]]
+[[gl:Accident]]
 [[it:accident]]
+[[fi:Accident]]
