robot  Adding:sv <nach#38864>

--- a/wiki/nach.wikitext
+++ b/wiki/nach.wikitext
@@ -21,3 +21,5 @@
 ===Separable prefix===
 '''nach-'''
 # Attached to many verbs to indicate following or succession, as in [[nachdrucken]], to [[reprint]].
+
+[[sv:nach]]
