robot  Adding:fi <nab#49272>

--- a/wiki/nab.wikitext
+++ b/wiki/nab.wikitext
@@ -9,3 +9,5 @@ American ([[SAMPA]]): [n{b]
 # To [[seize]], [[arrest]] or take into [[custody]] a [[criminal]] or [[fugitive]]
 # To [[grab]] or [[snatch]] something
 [[Category:English transitive verbs]]
+
+[[fi:Nab]]
