robot  Adding:gl <accommodate#33757>

--- a/wiki/accommodate.wikitext
+++ b/wiki/accommodate.wikitext
@@ -27,6 +27,7 @@ The translations below need to be checked by native speakers and inserted into t
 ===Adjective===
 #''(Archaic):'' Suitable; fit; adapted; as, means '''accommodate''' to end - [[Tillotson]]
 
-[[it:accommodate]]
-
 {{webster}}
+
+[[gl:Accommodate]]
+[[it:accommodate]]
