--- a/wiki/demonstrative_adjective.wikitext
+++ b/wiki/demonstrative_adjective.wikitext
@@ -1,2 +1,9 @@
-{{stub}}
+==English==
+===Noun===
+'''[[demonstrative]] [[adjective]]'''
+#an adjective that points out which [[person]], [[object]] or [[concept]] is being [[referred]] to
+#:Note: In the [[English language]] they are the same as the [[demonstrative pronoun]]s - [[this]], [[that]], [[these]] and [[those]]
+===Synonyms===
+*[[demonstrative]]
+*[[demonstrative determiner]]
 [[Category:Types of adjective]]
