/* Noun */ <demonstrative adjective#56928>

--- a/wiki/demonstrative_adjective.wikitext
+++ b/wiki/demonstrative_adjective.wikitext
@@ -1,8 +1,9 @@
 ==English==
 ===Noun===
 '''[[demonstrative]] [[adjective]]'''
-#an adjective that points out which [[person]], [[object]] or [[concept]] is being [[referred]] to
+#an adjective that points out which [[person]], [[object]] or [[concept]] is being [[referred]] to; whether it is [[singular]] or [[plural]], and whether it is [[near]] or [[far]] from the [[speaker]] or [[writer]]
 #:Note: In the [[English language]] they are the same as the [[demonstrative pronoun]]s - [[this]], [[that]], [[these]] and [[those]]
+
 ===Synonyms===
 *[[demonstrative]]
 *[[demonstrative determiner]]
