robot  Adding:pl,it <naive#93816>

--- a/wiki/naive.wikitext
+++ b/wiki/naive.wikitext
@@ -11,3 +11,6 @@ French ''[[naïve]]'', from Latin ''[[nativus]]'' 'native, natural'.
 # Lacking [[experience]], [[wisdom]], or [[judgement]].
 # (of art) Produced in a simple, childlike style, deliberately rejecting sophisticated techniques.
 # (of philosophy) Purposefully deluding oneself into believing in innocence and the ability to change things for the better,despite overwhelming proof to the contrary, in order to live a life of hope
+
+[[it:naive]]
+[[pl:Naive]]
