robot  Adding:gl <accordion#1320>

--- a/wiki/accordion.wikitext
+++ b/wiki/accordion.wikitext
@@ -31,4 +31,5 @@ From mid nineteenth century German ''Akkordion'' based on Italian ''accordare'' 
 <b>accordion</b>
 #[[accordion]]
 
+[[gl:Accordion]]
 [[it:accordion]]
