robot  Adding:gl <according#1318>

--- a/wiki/according.wikitext
+++ b/wiki/according.wikitext
@@ -35,4 +35,5 @@ Derivative of [[accord]]
 #''(Obsolete):'' [[Accordingly]]; [[correspondingly]]
 #:*That apprehends no further than this world, And squarest thy life according - Shakespeare, ''Measure for Measure, V-i''
 
+[[gl:According]]
 [[it:according]]
