/* Proper noun */ <scone#76796>

--- a/wiki/scone.wikitext
+++ b/wiki/scone.wikitext
@@ -8,3 +8,5 @@
 #A [[village]] north of [[Perth]] in [[Scotland]]; the [[coronation]] site of [[Scottish]] [[king]]s until 1651
 
 [[Category:Scots derivations]]
+
+a very tasty bread to be served with tea and heavey whipping cream
