/* Noun */ <leaf-storm#41697>

--- a/wiki/leaf-storm.wikitext
+++ b/wiki/leaf-storm.wikitext
@@ -2,7 +2,8 @@
 ===Noun===
 '''[[leaf]] [[storm]]'''
 
-# {{stub}}
+# a storm of leaves
+#:Note: There is actually no such phrase in English. It is just a translation of the title of a book by Gabriel García Márquez.
 
 ====Translations====
 *German: [[Laubsturm]] ''m''
