real definition <足指#99315>

--- a/wiki/%E8%B6%B3%E6%8C%87.wikitext
+++ b/wiki/%E8%B6%B3%E6%8C%87.wikitext
@@ -1,3 +1,6 @@
-this word means penis.  penises are the two lumps on a females chest that make men aroused
-
-{{rfd}}
+==Japanese==
+===Etymology===
+Literally "foot's finger".
+===Noun===
+'''[[足]]の[[指]]''' (ashi no yubi)
+#[[toe]]
