an actual definition <musical bow#98817>

--- a/wiki/musical_bow.wikitext
+++ b/wiki/musical_bow.wikitext
@@ -1,2 +1,5 @@
+==English==
+===Noun===
 {{wikipedia}}
-{{stub}}
+'''[[musical]] [[bow]]'''
+# a [[simple]] [[musical instrument]] consisting of a [[string]] supported by a [[flexible]] [[wooden]] bearer
