robot  Adding:zh <nation#56025>

--- a/wiki/nation.wikitext
+++ b/wiki/nation.wikitext
@@ -31,7 +31,9 @@
 
 *[[w:nation|Wikipedia article on ''nation'']] for further detail on nations vs. states and countries.
 
+[[Category:1000 English basic words]]
+
 [[et:Nation]]
 [[it:nation]]
 [[pl:Nation]]
-[[Category:1000 English basic words]]
+[[zh:Nation]]
