robot  Adding:pt <accurate#1373>

--- a/wiki/accurate.wikitext
+++ b/wiki/accurate.wikitext
@@ -23,6 +23,8 @@ Latin ''accuratus'', past participle and adjective, from ''accurare'' to take ca
 ===Derived words===
 *[[accuracy]]
 *[[accurately]]
+
 [[gl:Accurate]]
 [[it:accurate]]
+[[pt:Accurate]]
 [[sv:accurate]]
