--- a/wiki/putsch.wikitext
+++ b/wiki/putsch.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''putsch'''
 
-# {{stub}}
+# a [[sudden]] [[attempt]] by a [[group]] to [[overthrow]] a [[government]], [[illegally]] or by [[force]]
 
 ====Synonyms====
 *[[coup]]
