/* [[Japanese]] [[kanji]] */ macron, not circumflex <九#8655>

--- a/wiki/%E4%B9%9D.wikitext
+++ b/wiki/%E4%B9%9D.wikitext
@@ -41,7 +41,7 @@
 == [[Japanese]] [[kanji]] ==
 
 *'''Readings'''
-**'''[[On]]''': [[く]] (ku); [[きゅう]] (kyû)
+**'''[[On]]''': [[く]] (ku); [[きゅう]] (kyū)
 **'''[[Kun]]''': [[ここのつ]] (kokonotsu)
 
 ----
