robot  Adding:gl,nl <Navajo#90210>

--- a/wiki/Navajo.wikitext
+++ b/wiki/Navajo.wikitext
@@ -16,3 +16,6 @@
 *[[w:Athabaskan languages|Wikipedia article on the Athabaskan language family]]
 *[[w:Southern Athabaskan languages|Wikipedia article on the Southern Athabaskan language family]] (Apachean)
 *[[w:Na-Dené languages|Wikipedia article on the Na-Dené languages]]
+
+[[gl:Navajo]]
+[[nl:Navajo]]
