robot  Adding:pt <nauta#50421>

--- a/wiki/nauta.wikitext
+++ b/wiki/nauta.wikitext
@@ -61,3 +61,4 @@ This declension is unusual for a masculine noun.<br>
 [[Category:Latin masculine nouns in the first declension]]
 
 [[pl:Nauta]]
+[[pt:Nauta]]
