robot  Adding:nl <nausea#82978>

--- a/wiki/nausea.wikitext
+++ b/wiki/nausea.wikitext
@@ -6,7 +6,8 @@
 #Sea-sickness
 
 ====Translations====
-*French: [[haut-le-cœur]] 
+*French: [[haut-le-cœur]]
 
 [[it:nausea]]
+[[nl:nausea]]
 [[pl:Nausea]]
