robot  Adding:fr,hu <nature#3800>

--- a/wiki/nature.wikitext
+++ b/wiki/nature.wikitext
@@ -26,5 +26,7 @@ From {{L.}} '''[[natura]]''', future participle from perfect passive participle 
 *[[naturalism]]
 
 [[et:Nature]]
+[[fr:nature]]
 [[it:nature]]
+[[hu:nature]]
 [[fi:Nature]]
