--- a/wiki/receipt.wikitext
+++ b/wiki/receipt.wikitext
@@ -2,12 +2,19 @@
 ===Noun===
 '''receipt''' (plural: [[receipts]])
 
-# {{stub}}
+# the act of [[receiving]], or the fact of having been [[received]]
+#(''in plural'') a [[quantity]] or [[amount]] received
+# a [[written]] [[acknowledgment]] that a [[specified]] [[article]] or [[sum]] of [[money]] has been received.
 
-====Related terms====
+===Verb===
+'''to receipt'''  (''transitive'' or ''intransitive'')
+# to [[give]] or [[write]] a receipt (for something)
+# to [[mark]] a [[bill]] as having been [[paid]]
+
+===Related terms===
 *[[receive]]
 
-====Translations====
+===Translations to be checked===
 *Dutch: [[ontvangstbewijs]]
 *Finnish: [[kuitti]]
 *German: [[Empfang]], [[Empfangsbestätigung]], [[Quittung]]
