robot  Adding:sv <ace#2970>

--- a/wiki/ace.wikitext
+++ b/wiki/ace.wikitext
@@ -129,3 +129,5 @@ The translations below need to be checked by native speakers and inserted into t
 Google has hits for both "most ace" and "acest" [[User:Paul G|Paul G]] 17:41, 2 August 2004 (UTC) -->
 
 #(''slang'') Extremely good, excellent. <!--British and American as well as Australian-->
+
+[[sv:ace]]
