--- a/wiki/NB.wikitext
+++ b/wiki/NB.wikitext
@@ -1,29 +1,6 @@
-==English==
-===Etymology===
-Latin
+'''Nb'''<br>{{chemistry}} symbol for [[niobium]]
+[[Category:Symbols]]
 
-===Abbreviation===
-'''NB''' ''or'' '''N.B.'''
-
-# [[Nota bene]]; used in written English to introduce something to be noted.
-#:''NB: Do not write below this line.''
-
-====Translations====
-*Swedish: [[observera]], [[obs]]!
-
-===Abbreviation===
-'''NB'''
-
-#[[New Brunswick]] (''Canadian province'')
-
-----
-==Latin==
-===Abbreviation===
-'''NB'''
-
-#[[nota bene]]
-
-===Related terms===
-*[[notare]]
-*[[bene]]
-*[[bonus]]
+[[fr:Nb]]
+[[ja:Nb]]
+[[pl:Nb]]
