disambig IPA <callus#40974>

--- a/wiki/callus.wikitext
+++ b/wiki/callus.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Pronunciation===
-* (US) [[IPA]]: /ˈkæləs/
+* (US) [[International Phonetic Alphabet|IPA]]: /ˈkæləs/
 
 ===Noun===
 '''callus''' (plural '''calluses''')
