an actual definition <scour#47781>

--- a/wiki/scour.wikitext
+++ b/wiki/scour.wikitext
@@ -1,8 +1,9 @@
 ==English==
 ===Verb===
 '''to scour''' ([[scours]], [[scoured]], [[scouring]])
-
-# {{stub}}
+# To [[clean]], [[polish]], or [[wash]] something by [[scrubbing]] it [[vigorously]]
+# to [[search]] an [[area]] [[thoroughly]]
+# to [[move]] [[swiftly]]
 
 ====Derived terms====
 *[[scourer]] ''noun''
