robot  Adding:de <acetoso#46323>

--- a/wiki/acetoso.wikitext
+++ b/wiki/acetoso.wikitext
@@ -16,3 +16,5 @@ acetóso, /atʃeˈtoso/, /<tt>atSe"toso</tt>/
 ===Adjective===
 <b>[[acetoso]] ''m'', [[acetosa]] ''f''</b>
 #[[acetous]], [[acetose]]
+
+[[de:acetoso]]
