robot  Adding:fi,gl <ache#2975>

--- a/wiki/ache.wikitext
+++ b/wiki/ache.wikitext
@@ -31,5 +31,7 @@ Present participle: '''aching
 * '''Portuguese''': [[doer]]
 * '''Turkish''': [[ağrımak]],[[acımak]]
 
+[[gl:Ache]]
 [[it:ache]]
-[[pt:ache]]
+[[pt:Ache]]
+[[fi:Ache]]
