robot  Adding:pt,gl <achieve#2976>

--- a/wiki/achieve.wikitext
+++ b/wiki/achieve.wikitext
@@ -32,4 +32,6 @@ Present participle: '''Achieving'''
 *Portuguese: [[realizar]], [[cumprir]]
 *Spanish: [[lograr]], [[realizar]]
 
+[[gl:Achieve]]
 [[it:achieve]]
+[[pt:Achieve]]
