robot  Adding:nl <acne#55421>

--- a/wiki/acne.wikitext
+++ b/wiki/acne.wikitext
@@ -14,5 +14,7 @@ New Latin, probably a corruption of {{Gr.}} ''[[ακμή]]'', acme
 ===Derived terms===
 *[[bacne]]
 
-[[de:Acne]]
 [[Category:Greek derivations]]
+
+[[de:Acne]]
+[[nl:acne]]
