robot  Adding:pt,gl <acknowledge#40453>

--- a/wiki/acknowledge.wikitext
+++ b/wiki/acknowledge.wikitext
@@ -31,3 +31,6 @@ To [[avow]]; [[proclaim]]; [[recognize]]; [[own]]; [[admit]]; [[allow]]; [[conce
 ===Translations===
 *Korean: [[인정하다]], [[승인하다]]
 *[[Ido]]: [[agnoskar]]
+
+[[gl:Acknowledge]]
+[[pt:Acknowledge]]
