robot  Adding:pt,gl <acquire#40463>

--- a/wiki/acquire.wikitext
+++ b/wiki/acquire.wikitext
@@ -13,4 +13,6 @@ IPA: [[WEAE]] /ʌ.kwaɪ.ɚ/
 ====Synonyms====
 To [[obtain]]; [[gain]]; [[attain]]; [[procure]]; [[win]]; [[earn]]; [[secure]]. See  [[Obtain]].
 
+[[gl:Acquire]]
 [[it:acquire]]
+[[pt:Acquire]]
