robot  Adding:hu <new#2639>

--- a/wiki/new.wikitext
+++ b/wiki/new.wikitext
@@ -68,10 +68,10 @@
 *[[New World]]
 *[[New Zealand]]
 
+[[Category:200 English basic words]]
+
 [[fr:new]]
+[[hu:new]]
 [[pt:New]]
 [[fi:New]]
 [[vi:new]]
-
-
-[[Category:200 English basic words]]
