robot  Adding:zh <news#56451>

--- a/wiki/news.wikitext
+++ b/wiki/news.wikitext
@@ -79,5 +79,7 @@ Plural of obsolete noun "new", meaning "something that is new"; not, as is somet
 *[[world news]]
 *[[breaking news]]
 
-[[de:News]]
 [[Category:1000 English basic words]]
+
+[[de:News]]
+[[zh:News]]
