robot  Adding:pl,nl <acrylic#94723>

--- a/wiki/acrylic.wikitext
+++ b/wiki/acrylic.wikitext
@@ -7,3 +7,6 @@
 '''acrylic'''
 #an acrylic resin
 #a [[paint]] containing an acrylic resin; a [[painting]] executed using such a paint
+
+[[nl:acrylic]]
+[[pl:Acrylic]]
