robot  Adding:pt <actor#7157>

--- a/wiki/actor.wikitext
+++ b/wiki/actor.wikitext
@@ -57,4 +57,5 @@ Agent noun formed from ''[[actus]]'', perfect passive participle of ''[[agere]]'
 [[es:actor]]
 [[gl:Actor]]
 [[it:actor]]
+[[pt:Actor]]
 [[ro:Actor]]
