robot  Adding:fi <nightmare#90682>

--- a/wiki/nightmare.wikitext
+++ b/wiki/nightmare.wikitext
@@ -5,3 +5,5 @@
 #:''I had a '''nightmare''' that I tried to run but not could not move or breathe.''
 #(by extension) any [[bad]], [[miserable]], [[difficult]], or [[terrify]]ing experience
 #:''Cleaning up after identity theft can be a '''nightmare''' of phone calls and letters.''
+
+[[fi:Nightmare]]
