robot  Adding:gl <acute#35239>

--- a/wiki/acute.wikitext
+++ b/wiki/acute.wikitext
@@ -20,6 +20,7 @@
 #To give an acute sound to
 #:''he '''acutes''' his rising inflection too much''.
 
+[[gl:Acute]]
 [[it:acute]]
 [[pl:Acute]]
 [[pt:Acute]]
