robot  Adding:gl <adder#40537>

--- a/wiki/adder.wikitext
+++ b/wiki/adder.wikitext
@@ -39,5 +39,6 @@ From Old English ''addere'' (resulted from misdivision of ''a naddere'' to ''an 
 
 [[Category:English reptiles]]
 
+[[gl:Adder]]
 [[nl:adder]]
 [[pl:Adder]]
