--- a/wiki/gap.wikitext
+++ b/wiki/gap.wikitext
@@ -9,7 +9,7 @@
 ==Translations==
 
 *French: carence ''f'', trouée ''f'', décalage ''m''
-
+*Polish: szpara ''f'', szczelina ''f'', przepaść ''f'', luka ''f''
 ===Verb===
 
 '''to gap'''
