robot  Adding:fr,hu,es,gl,de <noche#90227>

--- a/wiki/noche.wikitext
+++ b/wiki/noche.wikitext
@@ -16,3 +16,9 @@
 *[[mañana]] - Morning
 *[[Tarde]] - Afternoon/Evening
 *[[Día]] - Day(time)
+
+[[de:noche]]
+[[es:noche]]
+[[fr:noche]]
+[[gl:Noche]]
+[[hu:Noche]]
