--- a/wiki/adequate.wikitext
+++ b/wiki/adequate.wikitext
@@ -17,5 +17,6 @@ Equal to some requirement; proportionate, or correspondent; fully sufficient; as
 *[[German]]: [[adäquat]]
 *[[Vietnamese]]: [[đủ]], [[đầy đủ]]
 
+[[gl:Adequate]]
 [[it:adequate]]
 [[pl:Adequate]]
