robot  Adding:nl,et,pl,sv,ja <nom#96363>

--- a/wiki/nom.wikitext
+++ b/wiki/nom.wikitext
@@ -26,4 +26,9 @@ From {{L.}} [[nominem]], accusative singular of [[nomen]], ''name''
 * [[prénom]]
 * [[pronom]]
 
+[[et:Nom]]
 [[fr:nom]]
+[[nl:nom]]
+[[ja:nom]]
+[[pl:Nom]]
+[[sv:nom]]
