robot  Adding:gl <adhesive#40557>

--- a/wiki/adhesive.wikitext
+++ b/wiki/adhesive.wikitext
@@ -12,5 +12,6 @@ IPA: [[WEAE]] /ædˈhi.sɪv/
 ===Noun===
 # A substance, such as glue, that provides or promotes adhesion.
 
+[[gl:Adhesive]]
 [[it:adhesive]]
 [[pl:Adhesive]]
