robot  Adding:it <adherence#92653>

--- a/wiki/adherence.wikitext
+++ b/wiki/adherence.wikitext
@@ -6,3 +6,5 @@
 #(''medical'') The [[extent]] to which a [[patient]] [[continue]]s an [[agreed]] [[treatment]] [[plan]]
 ===See also===
 *[[compliance]]
+
+[[it:adherence]]
