--- a/wiki/adhere.wikitext
+++ b/wiki/adhere.wikitext
@@ -10,8 +10,10 @@ IPA: [[WEAE]] /ædˈhiɹ/
 # To hold, be attached, or devoted; to remain fixed, either by personal union or conformity of faith, principle, or opinion; as, men adhere to a party, a cause, a leader, a church.
 # To be consistent or coherent; to be in accordance; to agree.
 
-[[it:adhere]]
-
 ===Translations===
 *Korean: [[붙어있다]]
 *[[Ido]]: [[adherar]]
+
+[[gl:Adhere]]
+[[it:adhere]]
+[[pt:Adhere]]
