robot  Adding:fr <nonante#39818>

--- a/wiki/nonante.wikitext
+++ b/wiki/nonante.wikitext
@@ -8,3 +8,5 @@
 #:'''usage note''':  Used in place of [[quatre-vingt-dix]] in Switzerland and Belgium.
 ===See also===
 * [[huitante]]
+
+[[fr:nonante]]
