robot  Adding:pl,it <adipose#89232>

--- a/wiki/adipose.wikitext
+++ b/wiki/adipose.wikitext
@@ -20,3 +20,6 @@ From the Latin ''[[adeps]]'' "fat, lard"
 
 * {{fr}} : adipeux, -euse
 * {{io}} : gras-oza, -atra
+
+[[it:adipose]]
+[[pl:Adipose]]
