robot  Adding:gl <administration#40645>

--- a/wiki/administration.wikitext
+++ b/wiki/administration.wikitext
@@ -18,5 +18,6 @@ IPA: [[WEAE]] /æd.mɪn.ə.steˈʃən/
 <b>administration</b> ''f''
 #[[administration]] 1. [[action of furnishing]] [[or]] [[applying]] 2. [[management of public]] [[affairs]], [[an]] [[institution]], [[business]], [[etc.]] 3. [[the]] [[persons]] [[collectively]] [[managing]] [[public]] [[affairs]], [[an]] [[institution]], [[business]], [[etc]].
 
+[[gl:Administration]]
 [[it:administration]]
 [[pl:Administration]]
