--- a/wiki/ADO.wikitext
+++ b/wiki/ADO.wikitext
@@ -11,4 +11,5 @@ IPA: [[WEAE]] /ʌˈdu/
 # Doing; trouble; difficulty; troublesome business; fuss; bustle; as, to make a great ado about trifles.
 
 [[de:ado]]
+[[et:Ado]]
 [[it:ado]]
