robot  Adding:pt,gl <admit#40658>

--- a/wiki/admit.wikitext
+++ b/wiki/admit.wikitext
@@ -12,9 +12,11 @@ IPA: [[WEAE]] /ædˈmɪt/
 # To concede as true; to acknowledge or assent to, as an allegation which it is impossible to deny; to own or confess; as, the argument or fact is admitted; he admitted his guilt.
 # To be capable of; to permit; as, the words do not admit such a construction. In this sense, of may be used after the verb, or may be omitted.
 
-[[it:admit]]
-[[sv:admit]]
-
 ===Translations===
 *Korean: [[인정하다]]
 *[[Ido]]: [[admisar]]
+
+[[gl:Admit]]
+[[it:admit]]
+[[pt:Admit]]
+[[sv:admit]]
