robot  Adding:gl <admonish#40662>

--- a/wiki/admonish.wikitext
+++ b/wiki/admonish.wikitext
@@ -21,4 +21,5 @@ you were disloyal, too.  See?&rdquo;
 <BR>Sir Arthur Conan Doyle in ''The Valley of Fear''
 </blockquote>
 
+[[gl:Admonish]]
 [[it:admonish]]
