robot  Adding:gl <admire#40652>

--- a/wiki/admire.wikitext
+++ b/wiki/admire.wikitext
@@ -14,5 +14,6 @@ To regard with wonder and delight; to look upon with an elevated feeling of plea
 *Korean: [[존경하다]]
 *[[Ido]]: [[admirar]]
 
+[[gl:Admire]]
 [[it:admire]]
 [[fi:Admire]]
