robot  Adding:gl <adore#4406>

--- a/wiki/adore.wikitext
+++ b/wiki/adore.wikitext
@@ -38,4 +38,5 @@ From Latin ''[[adorare]]'', '''adore''', from ''[[ad]]'', '''to''' + ''[[orare]]
 ====Translations====
 *[[English]]: adore
 
+[[gl:Adore]]
 [[it:adore]]
