robot  Adding:fr,gl,nl <adult#9971>

--- a/wiki/adult.wikitext
+++ b/wiki/adult.wikitext
@@ -67,6 +67,10 @@
 ===Related terms===
 *[[adulthood]]
 
-[[it:adult]]
-[[pl:Adult]]
 [[Category:Human]]
+
+[[fr:adult]]
+[[gl:Adult]]
+[[it:adult]]
+[[nl:adult]]
+[[pl:Adult]]
