robot  Adding:gl <advantage#40735>

--- a/wiki/advantage.wikitext
+++ b/wiki/advantage.wikitext
@@ -19,5 +19,6 @@ IPA: [[WEAE]] /ædˈvæn.tɪʤ/
 ====Synonyms====
 [[Advantageous]], [[Benefit]], [[Beneficial]].
 
+[[gl:Advantage]]
 [[it:advantage]]
 [[ru:Advantage]]
