robot  Adding:gl <advance#40729>

--- a/wiki/advance.wikitext
+++ b/wiki/advance.wikitext
@@ -23,4 +23,5 @@ To [[raise]]; [[elevate]]; [[exalt]]; [[aggrandize]]; [[improve]]; [[heighten]];
 *Finnish: [[edistää]]
 *{{sk}}: [[pokročilý]]
 
+[[gl:Advance]]
 [[it:advance]]
