robot  Adding:gl <advertise#40742>

--- a/wiki/advertise.wikitext
+++ b/wiki/advertise.wikitext
@@ -13,4 +13,5 @@ IPA: [[WEAE]] /ˈæd.vɚ.taɪz/
 ====Synonyms====
 To [[apprise]]; [[inform]]; make known; [[notify]]; [[announce]]; [[proclaim]]; [[promulgate]]; [[publish]].
 
+[[gl:Advertise]]
 [[it:advertise]]
