robot  Adding:fi,gl <adventure#40737>

--- a/wiki/adventure.wikitext
+++ b/wiki/adventure.wikitext
@@ -31,3 +31,6 @@ OE. [[aventure]], [[aunter]], [[anter]], F. [[aventure]], fr. LL. [[adventura]],
 *French: [[aventure]] ''f''
 *Swedish: [[äventyr]], [[äventyrlighet]]
 *German: [[Abenteuer]]
+
+[[gl:Adventure]]
+[[fi:Adventure]]
