--- a/wiki/adversary.wikitext
+++ b/wiki/adversary.wikitext
@@ -14,4 +14,6 @@ F [[adversaire]] from L [[adversarius]] ''[[ad]]'' + ''[[versarius]]''
 *Latin: [[adversarius]]
 *[[Slovak]]: [[odporca]] ''m'', [[protivník]] ''m''
 *Spanish: [[adversario]] ''m''
-[[gl:Adversario]]
+
+[[gl:Adversary]]
+[[pt:Adversary]]
