robot  Adding:gl <adviser#40753>

--- a/wiki/adviser.wikitext
+++ b/wiki/adviser.wikitext
@@ -15,3 +15,5 @@ In the ''US'', an ''adviser'' has a connotation of someone offering unsolicited 
 
 ====Translations====
 *[[French]]: [[conseiller]] ''m''
+
+[[gl:Adviser]]
