--- a/wiki/dunch.wikitext
+++ b/wiki/dunch.wikitext
@@ -1,37 +1,40 @@
 == English ==
-=== Etymology 1 ===
+=== Etymology ===
+'''jog, hit, punch'''
+:''Unknown''
+
+'''a fat hit from a claggy lie'''
+:''Said to have originated in British golfing slang by golfing magazines''
+
+'''a family name'''
+:''Unknown''
+
+'''a small meal between lunch and dinner in the late afternoon or early evening'''
+:''A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]])''
+
 {{etystub}}
 
-==== Transitive verb ====
+=== Transitive verb ===
 [[Category:English transitive verbs]]
 {{en-infl-reg-sibilant|dunch||}}
 # (''United Kingdom English, primarily Geordie and Scottish English'') jog, hit, punch
 
-=== Etymology 2 ===
-Said to have originated in British golfing slang by golfing magazines.
-==== Noun ====
+
+=== Noun ===
 '''dunch'''
 # (''Golf'') a fat hit from a claggy lie
-
-=== Etymology 3 ===
-{{etystub}}
-==== Proper noun ====
-'''Dunch'''
-# a [[family name]]
-
-=== Etymology 4 ===
-[[Category:English derivations]]
-A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coined by [[User:Mikhail Epstein|Mikhail Epstein]].
-==== Noun ====
-[[Category:English nouns]]
-'''dunch''' 
 # a small meal between lunch and dinner in the late afternoon or early evening (about 3-5 p.m.), usually including tea or coffee with cookies, sometimes fruits, a salad or a light sandwich.
 #:'''examples'''
 #:*"For tomorrow, I have already scheduled lunch and dinner with my colleagues. Let's have a '''dunch''' together."
 #:'''usage note'''
 #:*This is a more appropriate word for an intermediate meal than the once suggested "linner". Dunch, a small meal, is more similar to lunch than to dinner, and accordingly the word is more brief (one syllable). Also, the word "dunch" follows the pattern of naming another intermediate (or combined) meal - "brunch."
 
-===== Translations =====
+=== Proper noun ===
+'''Dunch'''
+# a [[family name]]
+
+=== Translations ===
+'''a small meal between lunch and dinner in the late afternoon or early evening'''
 {{top}}
 *[[Breton]]: [[adverenn]] ''f''
 *[[Interlingua]]: [[merenda]]
