--- a/wiki/troubleshoot.wikitext
+++ b/wiki/troubleshoot.wikitext
@@ -1,9 +1,9 @@
-troubleshoot
+== English ==
+=== Verb ===
+'''to troubleshoot'''
+#to analyze a problem to the point of determining a solution.
 
-Verb
-1. To analyze a problem to the point of determining a solution.
 
-
-Synonym
-1. debug
-2. diagnose
+==== Synonyms ====
+*[[debug]]
+*[[diagnose]]
