--- a/wiki/troubleshoot.wikitext
+++ b/wiki/troubleshoot.wikitext
@@ -1,9 +1,15 @@
 == English ==
+=== Etymology ===
+=== Pronunciation ===
+*[[AHD]]: <tt>/trŭb'əl-shūt'/</tt>
+
 === Verb ===
 '''to troubleshoot'''
 #to analyze a problem to the point of determining a solution.
 
-
 ==== Synonyms ====
 *[[debug]]
 *[[diagnose]]
+
+=== Translations ===
+*'''Dutch:''' [[probleemoplosser]]
