robot  Adding:fr,ru,de <OEM#98153>

--- a/wiki/OEM.wikitext
+++ b/wiki/OEM.wikitext
@@ -2,3 +2,7 @@
 ==={{initialism}}===
 #[[w:Original Equipment Manufacturer|Original Equipment Manufacturer]]
 OEM are companies that produced hardware to be sold under another company's brand.
+
+[[de:OEM]]
+[[fr:OEM]]
+[[ru:OEM]]
