robot  Adding:gl <afraid#40786>

--- a/wiki/afraid.wikitext
+++ b/wiki/afraid.wikitext
@@ -15,4 +15,5 @@ IPA: [[WEAE]] /ʌˈfɹaɪd/
 ====Synonyms====
 [[Fearful]]; [[timid]]; [[timorous]]; [[alarmed]]; [[anxious]].
 
+[[gl:Afraid]]
 [[it:afraid]]
