robot  Adding:fi,de,eo,nl,ja,hu,sv,ca <Afrika#90183>

--- a/wiki/Afrika.wikitext
+++ b/wiki/Afrika.wikitext
@@ -56,3 +56,12 @@ From English [[Africa]]
 [[Category:Slovene language]]
 [[Category:Tok Pisin proper nouns]]
 [[Category:Turkish language]]
+
+[[ca:Afrika]]
+[[de:Afrika]]
+[[eo:Afrika]]
+[[hu:Afrika]]
+[[nl:Afrika]]
+[[ja:Afrika]]
+[[fi:Afrika]]
+[[sv:Afrika]]
