robot  Adding:gl <against#6629>

--- a/wiki/against.wikitext
+++ b/wiki/against.wikitext
@@ -27,7 +27,9 @@
 
 [[Category:Negative words]]
 
+[[Category:1000 English basic words]]
+
+[[gl:Against]]
 [[it:against]]
 [[pl:Against]]
 [[pt:Against]]
-[[Category:1000 English basic words]]
