robot  Adding:gl <agenda#41013>

--- a/wiki/agenda.wikitext
+++ b/wiki/agenda.wikitext
@@ -46,6 +46,7 @@ The word ''agenda'' is the Latin plural of ''agendum'', but in English the word 
 <b>agenda</b> ''f''
 #[[agenda]], [[memorandum]] [[book]]
 
+[[gl:Agenda]]
 [[it:agenda]]
 [[nl:agenda]]
 [[ru:Agenda]]
