robot  Adding:gl <aggravate#41018>

--- a/wiki/aggravate.wikitext
+++ b/wiki/aggravate.wikitext
@@ -16,4 +16,5 @@ IPA: [[WEAE]] /ˈæg.rə.vet/
 ====Synonyms====
 [[To]] [[heighten]]; [[intensify]]; [[increase]]; [[magnify]]; [[exaggerate]]; [[provoke]]; [[irritate]]; [[exasperate]].
 
+[[gl:Aggravate]]
 [[it:aggravate]]
