robot  Adding:gl <agile#41024>

--- a/wiki/agile.wikitext
+++ b/wiki/agile.wikitext
@@ -30,5 +30,6 @@ The man drew out paper and tobacco and twirled the one up in the other with surp
 <b>agile</b>
 #[[agile]] [[nimble]]
 
+[[gl:Agile]]
 [[it:agile]]
 [[pl:Agile]]
