robot  Adding:et <occidental#50753>

--- a/wiki/occidental.wikitext
+++ b/wiki/occidental.wikitext
@@ -8,4 +8,5 @@
 '''occidental''' (''plural'' '''occidentals''')
 #Western Christian of the Latin rite. See [[Oriental]].
 
+[[et:Occidental]]
 [[pl:Occidental]]
