robot  Adding:fr,fi <ocean#39980>

--- a/wiki/ocean.wikitext
+++ b/wiki/ocean.wikitext
@@ -41,5 +41,8 @@ From Latin '''[[Oceanus]]''', from Greek '''[[Ωκεανός]]'''; originally a 
 ====See also====
 *[[sea]]
 
-[[it:ocean]]
 [[Category:Greek derivations]]
+
+[[fr:ocean]]
+[[it:ocean]]
+[[fi:Ocean]]
