robot  Adding:gl <agitate#41027>

--- a/wiki/agitate.wikitext
+++ b/wiki/agitate.wikitext
@@ -16,4 +16,5 @@ IPA: [[WEAE]] /ˈæ.ʤɪ.tet/
 ====Synonyms====
 [[To]] [[move]]; [[shake]]; [[excite]]; [[rouse]]; [[disturb]]; [[distract]]; [[revolve]]; [[discuss]]; [[debate]]; [[canvass]].
 
+[[gl:Agitate]]
 [[it:agitate]]
