robot  Adding:gl <agreeable#41045>

--- a/wiki/agreeable.wikitext
+++ b/wiki/agreeable.wikitext
@@ -17,8 +17,9 @@ IPA: [[WEAE]] /ʌˈgɹi.ʌ.bəl/
 ====Synonyms====
 [[Pleasing]]; [[pleasant]]; [[welcome]]; [[charming]]; [[acceptable]]; [[amiable]].
 
-[[it:agreeable]]
-
 ===Translations===
 *Korean: [[기분좋은]], [[상쾌한]]
 *[[Ido]]: [[agreabla]]
+
+[[gl:Agreeable]]
+[[it:agreeable]]
