robot  Adding:fi,gl <agree#41042>

--- a/wiki/agree.wikitext
+++ b/wiki/agree.wikitext
@@ -35,5 +35,7 @@ To [[assent]]; [[concur]]; [[consent]]; [[acquiesce]]; [[accede]]; [[engage]]; [
 *Finnish: [[olla samaa mieltä]]
 *Swedish: [[instämma ngt]]
 
+[[gl:Agree]]
 [[it:agree]]
 [[pt:Agree]]
+[[fi:Agree]]
