robot  Adding:fr,de <agosto#70370>

--- a/wiki/agosto.wikitext
+++ b/wiki/agosto.wikitext
@@ -32,6 +32,8 @@
 ==See also==
 [[janeiro]], [[fevereiro]], [[março]], [[abril]], [[maio]], [[junho]], [[julho]], [[agosto]], [[setembro]], [[outubro]], [[novembro]], [[dezembro]]
 
+[[de:agosto]]
+[[fr:agosto]]
 [[gl:Agosto]]
 [[it:agosto]]
 [[nl:agosto]]
