robot  Adding:gl <agony#41031>

--- a/wiki/agony.wikitext
+++ b/wiki/agony.wikitext
@@ -19,5 +19,7 @@ IPA: [[WEAE]] /ˈæ.gən.iː/
 ====Synonyms====
 [[anguish]]; [[torment]]; [[throe]]; [[distress]]; [[pang]]; [[suffering]].
 
-[[it:agony]]
 [[Category:Greek derivations]]
+
+[[gl:Agony]]
+[[it:agony]]
