robot  Adding:nl <agonist#48462>

--- a/wiki/agonist.wikitext
+++ b/wiki/agonist.wikitext
@@ -5,3 +5,5 @@
 #a muscle that [[contracts]] while another relaxes
 #:"when bending the elbow the biceps are the agonist"
 #(''Biochemistry'') a drug that can combine with a [[receptor]] on a          cell to produce a physiological reaction
+
+[[nl:agonist]]
