robot  Adding:zh <octopus#8153>

--- a/wiki/octopus.wikitext
+++ b/wiki/octopus.wikitext
@@ -95,3 +95,4 @@ From Latinized Greek noun '''[[oktopous]]''' ('''[[ὀκτώπους]]''') ''m''
 [[Category:Greek derivations]]
 
 [[nl:octopus]]
+[[zh:Octopus]]
