--- a/wiki/October.wikitext
+++ b/wiki/October.wikitext
@@ -81,4 +81,6 @@ From Middle English < Old English < Latin '''[[October#Latin|October]]''' (eight
 [[pl:October]]
 [[pt:October]]
 [[ro:October]]
+[[fi:October]]
 [[sv:October]]
+[[zh:October]]
