robot  Adding:nl <odor#50766>

--- a/wiki/odor.wikitext
+++ b/wiki/odor.wikitext
@@ -5,5 +5,6 @@
 '''odor''' (''plural'' '''odors''')
 #Any [[smell]], whether fragrant or offensive; [[scent]]; [[perfume]].
 
+[[nl:odor]]
 [[pl:Odor]]
 [[pt:Odor]]
