--- a/wiki/agriculture.wikitext
+++ b/wiki/agriculture.wikitext
@@ -43,4 +43,5 @@ The art or science of cultivating the ground, including the harvesting of crops,
 *[[agro-]]
 *[[agronomie]]
 
+[[gl:Agriculture]]
 [[it:agriculture]]
