robot  Adding:hu <air#4347>

--- a/wiki/air.wikitext
+++ b/wiki/air.wikitext
@@ -241,9 +241,11 @@
 
 #[[water]]
 
+[[Category:200 English basic words]]
+
 [[et:Air]]
 [[fr:air]]
 [[it:air]]
+[[hu:air]]
 [[nl:air]]
 [[ro:Air]]
-[[Category:200 English basic words]]
