--- a/wiki/okapi.wikitext
+++ b/wiki/okapi.wikitext
@@ -1,1 +1,3 @@
 The only close living relative of the [[giraffe]]; a large [[mammal]] found in the [[rainforests]] of the Congo, with a reddish brown coat and white stripes on its hindquarters.  ([[w:okapi|Wikipedia article]])
+
+[[nl:okapi]]
