robot  Adding:fr,de <olla#43825>

--- a/wiki/olla.wikitext
+++ b/wiki/olla.wikitext
@@ -35,6 +35,8 @@ Only the [[indicative]] present tense has an irregular form, and the stem is jus
 ===Related terms===
 *[[oma#Finnish|oma]]
 
+[[de:olla]]
 [[es:olla]]
+[[fr:olla]]
 [[pl:Olla]]
 [[fi:Olla]]
