--- a/wiki/Andorra.wikitext
+++ b/wiki/Andorra.wikitext
@@ -26,7 +26,7 @@ Official name: [[Principality of Andorra]].
 *Galician: Andorra
 *German: Andorra
 *Greek: [[Ανδόρα]]
-*Hebrew: [[אנדורה]]
+*Hebrew: [[אנדורהט]]
 *Hungarian: Andorra
 *[[Ido]]: [[Andora]]
 *Indonesian: Andorra <!-- Maybe it should be Andora, but id.wikipedia has this spelling-->
