/* Usage note */ <bimonthly#38166>

--- a/wiki/bimonthly.wikitext
+++ b/wiki/bimonthly.wikitext
@@ -19,6 +19,8 @@ BA&Iuml;-mohnth-lee
 ====Usage note====
 Because of the ambiguity of this word, it is best to avoid it.  Instead, use ''twice a month'' or ''every two months'' as appropriate.
 
+"Bimonthly" correctly refers an "every 2 months" occurance. "Every 2 weeks" should be termed "biweekly" or "semimonthly."
+
 ====Translations====
 *French: [[deux]] [[fois]] par [[mois]] (1), [[tous]] les deux mois (2)
 *Italian: [[due]] [[volte]] al [[mese]] (1), [[tutti]] i due mesi (2)
