--- a/wiki/bimonthly.wikitext
+++ b/wiki/bimonthly.wikitext
@@ -13,8 +13,8 @@ BA&Iuml;-mohnth-lee
 [[Category:English adverbs]]
 '''bimonthly'''
 
-#[[Twice]] every [[month]].
 #Occurring [[once]] every two months.
+#[[Twice]] every [[month]]. (Semimonthly)
 
 ====Usage note====
 Because of the ambiguity of this word, it is best to avoid it.  Instead, use ''twice a month'' or ''every two months'' as appropriate.
