--- a/wiki/biweekly.wikitext
+++ b/wiki/biweekly.wikitext
@@ -14,8 +14,9 @@ bi + [[week]] + -ly
 ===Adverb===
 '''biweekly''
 
-#[[Twice]] every [[week]] without fail.
 #Occurring [[once]] every two weeks.
+#[[Twice]] every [[week]] without fail.
+
 
 ====Synonyms====
 *[[semi-weekly]]
@@ -23,6 +24,8 @@ bi + [[week]] + -ly
 
 ====Usage note====
 Because of the ambiguity of this word, it is best to avoid it.  Instead, use ''twice a week'', ''every two weeks'' or ''fortnightly'' as appropriate.
+
+Correctly refers to "every 2 weeks."
 
 ====Translations====
 
