robot  Adding:fr <one#1692>

--- a/wiki/one.wikitext
+++ b/wiki/one.wikitext
@@ -260,6 +260,9 @@ Used in either the nominative or accusative case. (''Reflexive case'': [[oneself
 '''one'''
 #[[they]] ([[feminine]])
 
+[[Category:100 English basic words]]
+
+[[fr:one]]
 [[gl:One]]
 [[ko:One]]
 [[la:One]]
@@ -268,4 +271,3 @@ Used in either the nominative or accusative case. (''Reflexive case'': [[oneself
 [[pt:One]]
 [[ru:One]]
 [[sv:one]]
-[[Category:100 English basic words]]
