robot  Adding:pl <algebraic#98501>

--- a/wiki/algebraic.wikitext
+++ b/wiki/algebraic.wikitext
@@ -4,3 +4,5 @@
 # of, or relating to [[algebra]]
 #{{mathematics}} of an [[expression]], [[equation]] or [[function]] containing only [[number]]s, [[letter]]s and [[arithmetic operator]]s
 [[category:English adjectives]]
+
+[[pl:Algebraic]]
