--- a/wiki/road.wikitext
+++ b/wiki/road.wikitext
@@ -31,6 +31,7 @@ The term road is used with the preposition on. Something is on the road, but in 
 *Czech: [[ulice]]
 *Danish: [[gade]]
 *Dutch: [[baan]] ''f'', [[weg]] ''m'', [[straat]] ''f''
+*Estonian: [[tee]]
 *Finnish: [[tie]]
 *French: [[route]] ''f''
 *German: [[Straße]] ''f'', [[Straßen]] ''pl''
