--- a/wiki/absolute.wikitext
+++ b/wiki/absolute.wikitext
@@ -63,3 +63,11 @@ Latin ''absolutus'', past participle of ''absolvere''. Compare French ''absolu''
 '''absolute'''
 #''(Geometry):'' In a plane, the two imaginary circular points at [[infinity]]; in space of three [[dimensions]], the imaginary circle at infinity.
 #''(Grammar)'': The first of the [[three degrees of comparison]]
+
+====Translations====	 
+*Dutch: [[absolute]] ''n''	 
+*French: [[absolu]] ''m''	 
+*Swedish: [[positiv]] ''n'' (2)	 
+[[gl:Absolute]]	 
+[[it:absolute]]	 
+[[pt:Absolute]]
