--- a/wiki/airframe.wikitext
+++ b/wiki/airframe.wikitext
@@ -2,6 +2,7 @@
 === Pronunciations ===
 *{{SAMPA}} /"Er.fre(I)m/
 *{{IPAlink}} {{IPA|/'ɛɹ.fɹe(ɪ)m/}}
+*{{AHD}} <tt>/âr'frām'/</tt>
 
 === Noun ===
 '''airframe'''
