robot  Adding:gl,pl,zh,fr,de <aller#90384>

--- a/wiki/aller.wikitext
+++ b/wiki/aller.wikitext
@@ -1,6 +1,11 @@
 ==French==
 ===Verb===
 # To [[go]].
-[[et:aller]]
-
 [[Category: French verbs]]
+
+[[de:aller]]
+[[et:Aller]]
+[[fr:aller]]
+[[gl:Aller]]
+[[pl:Aller]]
+[[zh:Aller]]
