robot  Adding:sv,hi,nl,ja,hu,et,fr <Allemagne#92480>

--- a/wiki/Allemagne.wikitext
+++ b/wiki/Allemagne.wikitext
@@ -8,3 +8,11 @@
 ===See also===
 *[[germanisant]]
 *[[germanisme]]
+
+[[et:Allemagne]]
+[[fr:Allemagne]]
+[[hi:Allemagne]]
+[[hu:Allemagne]]
+[[nl:Allemagne]]
+[[ja:Allemagne]]
+[[sv:Allemagne]]
