overhaul, +noun, +adj, +pro, wikify, fmt <biweekly#38167>

--- a/wiki/biweekly.wikitext
+++ b/wiki/biweekly.wikitext
@@ -1,33 +1,33 @@
 ==English==
-===Pronunciation===
-
-'''Bi*week-ly'''
-*[[AHD]]: //
-*[[IPA]]: //
-*[[SAMPA]]: //
-BA&Iuml;-week-lee
+=== Pronunciations ===
+*{{SAMPA}} /baI.wik.li/
+*{{IPAlink}} {{IPA|/baɪ.'wik.li/}}
 
 ===Etymology===
+[[bi-]] + [[week]] + [[-ly]]
 
-bi + [[week]] + -ly
+=== Adjective ===
+'''biweekly'''
+# occuring twice a week
+# occuring once every two weeks
 
 ===Adverb===
 '''biweekly''
+# every two weeks
+# [[twice]] a [[week]]
 
-#Occurring [[once]] every two weeks.
-#[[Twice]] every [[week]] without fail.
-
-
-====Synonyms====
-*[[semi-weekly]]
-*(2): [[fortnightly]] (''British English'')
+==== Synonyms ====
+* (2) [[semiweekly]]
+*(''British'') (1) [[fortnightly]] 
 
 ====Usage note====
 Because of the ambiguity of this word, it is best to avoid it.  Instead, use ''twice a week'', ''every two weeks'' or ''fortnightly'' as appropriate.
 
-Correctly refers to "every 2 weeks."
+=== Noun ===
+'''biweekly''' ''pl.'' '''biweeklies'''
+# that which is published or released once every two weeks
+#: ''The local paper is a [[biweekly]].''
 
 ====Translations====
-
 *French: [[deux]] [[fois]] par [[semaine]] (1), [[tous]] les deux semaines (2), tous les [[quinze]] [[jour]]s (2)
 *Italian: [[due]] [[volte]] alla [[settimana]] (1), [[tutte]] le due settimane (2)
