--- a/wiki/italicise.wikitext
+++ b/wiki/italicise.wikitext
@@ -6,7 +6,7 @@
 From {{E.}} ''[[italic]]'' + [[-ise]]
 
 ===Pronunciation===
-'''{{AHD}}:''' /ĭ-tăl'ĭ-sīz'/
+*{{AHD|/ĭ-tăl'ĭ-sīz'/}}
 
 === Verb ===
 '''to italicise'''
