--- a/wiki/italicize.wikitext
+++ b/wiki/italicize.wikitext
@@ -6,7 +6,7 @@
 From {{E.}} ''[[italic]]'' + [[-ize]]
 
 ===Pronunciation===
-*'''{{AHD}}:''' ĭ-tăl'ĭ-sīz'
+*{{AHD|/ĭ-tăl'ĭ-sīz'/}}
 
 === Verb ===
 '''to italicize'''
