robot  Adding:es <allow#41138>

--- a/wiki/allow.wikitext
+++ b/wiki/allow.wikitext
@@ -30,4 +30,6 @@ From Middle {{E.}} ''[[allouen]]'', Old {{F.}} ''[[alouer]]'', {{L.}} ''[[allaud
 
 ===Reference===
 *Webster 1913
+
+[[es:allow]]
 [[it:allow]]
