added AHD pronunciation <biweekly#38167>

--- a/wiki/biweekly.wikitext
+++ b/wiki/biweekly.wikitext
@@ -2,6 +2,7 @@
 === Pronunciations ===
 *{{SAMPA}} /baI.wik.li/
 *{{IPAlink}} {{IPA|/baɪ.'wik.li/}}
+*{{AHD|/bī-wēk'lē/}}
 
 ===Etymology===
 [[bi-]] + [[week]] + [[-ly]]
