robot  Adding:fr <opportunist#84026>

--- a/wiki/opportunist.wikitext
+++ b/wiki/opportunist.wikitext
@@ -3,3 +3,5 @@
 '''opportunist'''
 #Someone who takes [[advantage]] of any [[opportunity]] to [[advance]] his own [[situation]], placing [[expediency]] above [[principle]]
 [[Category:English nouns]]
+
+[[fr:opportunist]]
