robot  Adding:nl <opium#53303>

--- a/wiki/opium.wikitext
+++ b/wiki/opium.wikitext
@@ -7,4 +7,5 @@
 #* "Religion is the sigh of the oppressed creature, . . . It is the '''opium''' of the people." ''Karl Marx''
 
 [[fr:opium]]
+[[nl:opium]]
 [[pl:Opium]]
