robot  Adding:et <opinion#9088>

--- a/wiki/opinion.wikitext
+++ b/wiki/opinion.wikitext
@@ -19,8 +19,10 @@
 *Spanish: [[opinión]]
 *Swedish: [[mening]], [[uppfattning]], [[omdöme]], [[tycke]], [[åsikt]]
 
+[[Category:1000 English basic words]]
+
+[[et:Opinion]]
 [[fr:opinion]]
 [[pl:Opinion]]
 [[ru:Opinion]]
 [[sv:opinion]]
-[[Category:1000 English basic words]]
