robot  Adding:fr <allure#41148>

--- a/wiki/allure.wikitext
+++ b/wiki/allure.wikitext
@@ -14,3 +14,5 @@ IPA: [[WEAE]] /ʌˈluɚ/
 To[[attract]]; [[entice]]; [[tempt]]; [[decoy]]; [[seduce]].
 
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
+
+[[fr:allure]]
