--- a/wiki/Eleusinian.wikitext
+++ b/wiki/Eleusinian.wikitext
@@ -1,1 +1,4 @@
-Pertaining to the mysteries of the same name.{{cleanup}}
+==English==
+===Adjective===
+'''Eleusinian'''
+# of, or relating to [[Eleusis]], or it [[mysteries]]
