robot  Adding:fr <alpha#27616>

--- a/wiki/alpha.wikitext
+++ b/wiki/alpha.wikitext
@@ -76,4 +76,5 @@ From Greek ''alpha'', the first letter of the Greek alphabet, from Hebrew ''[[al
 *[[English]]: alpha
 
 [[es:alpha]]
+[[fr:alpha]]
 [[pl:Alpha]]
