wikified, added example, etymology, pronunciation <compulsion#99355>

--- a/wiki/compulsion.wikitext
+++ b/wiki/compulsion.wikitext
@@ -1,9 +1,10 @@
-''For other uses, see [[compulsion (disambiguation)]]''
+== English ==
+=== Etymology ===
+From late {{L.}} '''''[[compulsiō]]'''''
 
-A '''compulsion''' is an irrational need to perform some action, often despite negative consequences.
+=== Pronunciation ===
+*{{AHD|/kəm-pŭl'shən/}}
 
-
-
-===See also===
-*[[OCD]]
-*[[Drug addiction]]
+=== Noun ===
+#an [[irrational]] need to perform some action, often despite negative consequences.
+#:''During the basketball game, I had a sudden '''compulsion''' to [[smoke]]; however, I did not have any cigarettes with me.''
