--- a/wiki/corporeal.wikitext
+++ b/wiki/corporeal.wikitext
@@ -1,35 +1,18 @@
-Corporeal
+== English ==
+=== Etymology ===
+From the Latin ''[[corporeus]]'' from ''[[corpus]]'' "body"  
 
-Pronunciation:
+=== Adjective ===
+'''corporeal'''
+# that which is [[material]]; [[tangible]]; [[physical]]
+#: ''His omnipotence That to [[corporeal]] substance could add Speed almost spiritual.'' - Milton
+# of or pertaining to the body; [[bodily]]
+# (''archaic'') [[corporal]]
 
-Cohrp-or-e-all
-
-==Noun==
-
-1.  a term meaning an entity that has substance. 
-
-== Origins ==
-
-Derived from [[Latin]] word 'corpus' meaning 'body'.  Thus, corporeal means something 'has a body'.
-
-So, corporeal things have bodies that can be touched, have mass, occupy space, are otherwise tangible.
-
-The Latin root is corpus (body).  This is also the root of words like "[[corps]]" (a group of people) and "corpse" (a dead body). The term "corpus" is also sometimes used in modern English to refer to a "body of related facts or objects" (for example a "corpus of knowlege" (for example the British National Corpus)
-
-==Antonyms==
-
-[[incorporeal]]
-
-==Related Words==
-
-[[corporal]]
-
-==Examples==
-
-An example of an incorporeal being is the tooth fairy - an imaginary being that can be visualized, spoken to, etc., but not actually touched.
-
-==Discussion==
-
-Note: the term corporal has related meanings, but much different usage and connotation. For example corporal punishment, literally punishment of the body, refers to physical acts of spanking, flogging, whipping, or even capital punishment. One could not interchangeably say "corporeal punishment."
+=== Antonyms ===
+*[[ethereal]]
+*[[incorporeal]]
+*[[intangible]]
+*[[spiritual]]
 
 [[it:corporeal]]
