/* Translations */ pl: <hectare#43657>

--- a/wiki/hectare.wikitext
+++ b/wiki/hectare.wikitext
@@ -13,6 +13,7 @@ French ''hectare'', from Greek [[hect-]] + French [[are]]
 ====Translations====
 *Finnish: [[hehtaari]]
 *Japanese: [[ヘクタール]], [[㌶]] (hekutaru)
+*Polish: [[hektar]]
 *Slovak: [[hektár#Slovak|hektár]] ''m''
 *Swedish: [[hektar]]
 
