robot  Adding:fi,fr <aluminium#30002>

--- a/wiki/aluminium.wikitext
+++ b/wiki/aluminium.wikitext
@@ -159,9 +159,11 @@ http://elements.vanderkrogt.net/elem/al.html
 (A lot of the translations were taken from that site with permission from the author)
 [[Category:Chemical elements]]
 
+[[fr:aluminium]]
 [[it:aluminium]]
 [[la:Aluminium]]
 [[nl:aluminium]]
 [[ja:aluminium]]
 [[pl:Aluminium]]
+[[fi:Aluminium]]
 [[zh:Aluminium]]
