robot  Adding:pl <altiplano#91159>

--- a/wiki/altiplano.wikitext
+++ b/wiki/altiplano.wikitext
@@ -11,3 +11,5 @@ From American Spanish from Latin ''[[altus]]'' + ''[[planum]]'' - high plain
 ===Noun===
 '''altiplano''' (''plural'' '''altiplanos''')
 # a [[high]] [[plateau]]
+
+[[pl:Altiplano]]
