robot  Adding:de <ordo#93790>

--- a/wiki/ordo.wikitext
+++ b/wiki/ordo.wikitext
@@ -4,3 +4,5 @@
 {{wikipedia}}
 '''ordo'''  (''plural:'' [[ordines]])
 # A musical phrase constructed from one or more statements of one modal pattern and ending in a rest.
+
+[[de:ordo]]
